fix height on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,3 +38,23 @@ body {
     left: 0;
   }
 }
+
+.h-screen {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+}
+.min-h-screen {
+  min-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  min-height: calc(var(--vh, 1vh) * 100);
+}
+.max-h-screen {
+  max-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  max-height: calc(var(--vh, 1vh) * 100);
+}
+
+html,
+body,
+#__next {
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+}
